style.css
html {
  background: #005A9C;
  padding: 1em;
}

body {
  background: #fff;
  border-radius: .6em;
  color: #333;
  font: 1.1em/1.3 Helvetica, Arial, Verdana, sans-serif;
  hyphens: none;
  margin: 0 auto;
  max-width: 65em;
  padding: 1em 3em;
}

a, h1, h2 {
  color: #005A9C;
}

.graphic {
  height: 13em;
  margin: 0 -1.5em;
  overflow: hidden;
  position: relative;
}

.graphic img {
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

/* If you rather clip than squeeze the image, remove `height: 100%`. */
.box {
  border-radius: .6em;
  border: 1px solid #CCC;
  box-shadow: .2em .4em .5em #888;
  clear: right;
  color: #666;
  float: right;
  font-size: smaller;
  margin: 0 0 1em .6em;
  padding: .3em;
  text-align: center;
  width: 19em;
}

.box h2 {
  font-size: 120%;
}

footer {
  clear: both;
  color: #555;
  font-size: smaller;
  margin: 1em 0;
}

.menu {
  background: #005A9C;
  border-collapse: collapse;
  border: hidden;
  display: table;
  font-size: smaller;
  font-weight: 700;
  margin: 0 0 2em;
  table-layout: fixed;
  width: 100%;
}

.menu li {
  border: 1px solid #fff;
  border-top: none;
  display: table-cell;
  padding: .3em .2em;
  text-align: center;
  vertical-align: middle;
}

.menu a {
  color: #eee;
  display: block;
  text-decoration: none;
}

.menu a:hover {
  background: #a2b3a1;
  color: #000;
}

.menu a.active-tab {
    background: white;
    outline: #a2b3a1;
    color: #005A9C;
}

ul {
  list-style: square;
  margin-left: 0;
  padding-left: 1em;
}

blockquote {
  margin-left: 1em;
}

dd {
  margin: 0 0 .6em;
}

dt {
  font-weight: 700;
}

img {
  max-width: 100%;
}

h1, h2, h3, h4 {
  break-after: avoid;
}

address {
  line-height: .25em;
}

@media all and (max-width: 40em) {
  /* The right-floating boxes become normal blocks. */
  body {
    padding: 1em;
  }

  .graphic {
    height: 10em;
    margin: 0;
  }

  .box {
    float: none;
    width: auto;
  }

  /* The horizontal menu becomes vertical. */
  .menu ul {
    display: block;
    margin: 0;
    padding: 0;
  }

  .menu li {
    display: block;
    border-style: none none solid;
  }
}

@page {
  margin: 2cm;
}

@media print {
  html {
    background: none;
    padding: 0;
  }

  body {
    background: none;
    border-radius: 0;
    padding: 0;
  }
}

/* Initialize footnote counters. */
body {
  counter-reset: footnote_counter footnote-ref_counter;
}

h2.footnote {
  counter-increment: footnote_counter;
}

a.footnote-ref {
  counter-increment: footnote-ref_counter;
  text-decoration: none;
}

h2.footnote:before {
  content: counter(footnote_counter);
  font-size: .9em;
  margin-left: -3em;
  margin-right: 1em;
}

a.footnote-ref:after {
  content: counter(footnote-ref_counter);
  font-size: .6em;
  margin-left: .25em;
  vertical-align: super;
}

h2.footnote:before,
a.footnote-ref:after {
  background-color: #005A9C;
  border-radius: 1em;
  color: #fff;
  font-weight: 700;
  padding: .1em .5em;
}

table.schedule {
  border-collapse: separate;
  border-spacing: 3px;
}

th {
  background-color: #005A9C;
  border-radius: 5px 0 0 5px;
  color: #fff;
  margin-bottom: 5px;
  padding: 3px 6px;
  vertical-align: top;
  white-space: nowrap;
}

td {
  border-color: #005A9C;
  border-radius: 0 5px 5px 0;
}

article.sponsors {
  border: 1px solid #333;
  padding: .1em;
}

#notification {
  background-color: #ff0;
  border-radius: .6em;
  border: 1px solid #CCC;
  box-shadow: .2em .4em .5em #888;
  color: #666;
  font-size: smaller;
  font-weight: 700;
  margin: 0 0 1em;
  padding: .3em;
  text-align: center;
}

.concluded {
  text-decoration: line-through;
}

@media print {
  h1 {
    background: none;
    color: #000;
  }

  nav, aside {
    display: none;
  }

  body, article {
    margin: 0;
    padding: 0;
    width: 100%;
  }

  @page {
    margin: 2cm;
  }

  h2, h3 {
    page-break-after: avoid;
  }

  article {
    page-break-before: always;
  }

  ul, img {
    page-break-inside: avoid;
  }

  aside#dates {
    display: none;
  }
}

